// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product holder properly renders a single product 1`] = `
<div>
  <div
    class="product-holder"
  >
    <div
      class="store-product"
    >
      <img
        src="placeholder"
      />
      <button
        aria-label="Remove from cart"
        class="store-product__remove-button"
        type="button"
      >
        --
      </button>
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        5
      </span>
      <button
        aria-label="Add to cart"
        class="store-product__add-button"
        type="button"
      >
        ++
      </button>
      <div
        class="store-product__name"
      >
        Me smiling
      </div>
    </div>
  </div>
</div>
`;

exports[`Product holder properly renders three products 1`] = `
<div>
  <div
    class="product-holder"
  >
    <div
      class="store-product"
    >
      <img
        src="frown placeholder"
      />
      <button
        aria-label="Remove from cart"
        class="store-product__remove-button"
        type="button"
      >
        --
      </button>
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        9
      </span>
      <button
        aria-label="Add to cart"
        class="store-product__add-button"
        type="button"
      >
        ++
      </button>
      <div
        class="store-product__name"
      >
        Frown
      </div>
    </div>
    <div
      class="store-product"
    >
      <img
        src="smile placeholder"
      />
      <button
        aria-label="Remove from cart"
        class="store-product__remove-button"
        type="button"
      >
        --
      </button>
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        2
      </span>
      <button
        aria-label="Add to cart"
        class="store-product__add-button"
        type="button"
      >
        ++
      </button>
      <div
        class="store-product__name"
      >
        Smile
      </div>
    </div>
    <div
      class="store-product"
    >
      <img
        src="depression placeholder"
      />
      <button
        aria-label="Remove from cart"
        class="store-product__remove-button"
        type="button"
      >
        --
      </button>
      <span
        aria-label="Amount in cart"
        data-testid="Amount in cart"
      >
        6
      </span>
      <button
        aria-label="Add to cart"
        class="store-product__add-button"
        type="button"
      >
        ++
      </button>
      <div
        class="store-product__name"
      >
        Depression
      </div>
    </div>
  </div>
</div>
`;
